src/objects/FEMA_Registration__c.object
<CustomObject>
    <description>Collect data from an person registering with FEMA after a disaster</description>
    <fields>
        <fullName>AddressCityName__c</fullName>
        <label>Address City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressNoteText__c</fullName>
        <label>Address Note Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddressStreetName__c</fullName>
        <label>Address Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressZipExtensionNumber__c</fullName>
        <label>Address Zip Extension Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneAreaCode__c</fullName>
        <label>Alternate Phone Area Code</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneExtensionNumber__c</fullName>
        <label>Alternate Phone Extension Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneNumber__c</fullName>
        <label>Alternate Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AppliedDate__c</fullName>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BusinessName__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBRAMapping__c</fullName>
        <label>CBRA Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DamagedDwellingInCBRA__c</fullName>
        <label>Damaged Dwelling In CBRA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disaster</label>
        <referenceTo>Disaster__c</referenceTo>
        <relationshipLabel>FEMA Registrations</relationshipLabel>
        <relationshipName>FEMA_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEMAControlNumber__c</fullName>
        <label>FEMA Control Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMA_Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FEMA Registrant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FEMA Registrations</relationshipLabel>
        <relationshipName>FEMA_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FIPSLanguageCode__c</fullName>
        <label>FIPSLanguageCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloodZoneRequest__c</fullName>
        <label>Flood Zone Request</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FloodZone__c</fullName>
        <label>Flood Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeDamageFlag__c</fullName>
        <label>Home Damage Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIPActiveFlag__c</fullName>
        <label>NFIP Active Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIRAInComplianceFlag__c</fullName>
        <label>NFIRA In Compliance Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIRAMaintainedFlag__c</fullName>
        <label>NFIRA Maintained Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIRAPriorRestrictedFlag__c</fullName>
        <label>NFIRA Prior Restricted Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIRARequiredFlag__c</fullName>
        <label>NFIRA Required Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFIRAVerificationFlag__c</fullName>
        <label>NFIRA Verification Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageAlreadyMailedFlag__c</fullName>
        <label>Package Already Mailed Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanelNumber__c</fullName>
        <label>Panel Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalPropertyDamageFlag__c</fullName>
        <label>Personal Property Damage Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceCode__c</fullName>
        <label>PlaceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimEmailAddress__c</fullName>
        <label>Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryEmailAddress__c</fullName>
        <label>Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryPhoneAreaCode__c</fullName>
        <label>Primary Phone Area Code</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryPhoneExtensionNumber__c</fullName>
        <label>Primary Phone Extension Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryPhoneNumber__c</fullName>
        <label>Primary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SBASpecialHandlingFlag__c</fullName>
        <label>SBA Special Handling Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBAStatusCode__c</fullName>
        <label>SBA Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SanctionCommunityFlag__c</fullName>
        <label>Sanction Community Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SanctionCommunityNumber__c</fullName>
        <label>Sanction Community Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTypeCode__c</fullName>
        <label>Source Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIPCode__c</fullName>
        <label>ZIPCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>damagedDwellingCityName__c</fullName>
        <label>Damaged Dwelling City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>damagedDwellingStateCode__c</fullName>
        <label>Damaged Dwelling State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>damagedDwellingStreetAddress__c</fullName>
        <label>Damaged Dwelling Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>damagedDwellingZipCode__c</fullName>
        <label>Damaged Dwelling Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>damagedDwellingZipExtensionNumber__c</fullName>
        <label>Damaged Dwelling Zip Extension Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>FEMA Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FEMA Registration Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEMA Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>